--- a/a2/index.html
+++ b/a2/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+	
+	<!-- This is a container for data about the HTML document itself. Added by Lev Lvovsky -->
+<head>
+<meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="name-of-your-css-file.css">
+  <title>A2 - Group Chessboard</title>
+</head>
+  <body>
+		
+	</body>
+</html>
