--- a/a2/index.html
+++ b/a2/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 	
-	<!-- This is a container for data about the HTML document itself. Added by Lev Lvovsky -->
+<!-- This is a container for data about the HTML document itself. Added by Lev Lvovsky -->
 <head>
 <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="name-of-your-css-file.css">
   <title>A2 - Group Chessboard</title>
 </head>
-  <body>
+
+	
+<body>
+
+<!-- This is a footer. Added by Lev Lvovsky -->
+<div id="footer"><p><a href="http://validator.w3.org/check?uri=referer" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a>
+<a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank"><img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a></p></div>
 		
-	</body>
+ </body>
 </html>
