--- a/a2/index.html
+++ b/a2/index.html
@@ -3,11 +3,74 @@
 	
 <!-- This is a container for data about the HTML document itself. Added by Lev Lvovsky -->
 <head>
-<meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="name-of-your-css-file.css">
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/chess.css" type="text/css">
   <title>A2 - Group Chessboard</title>
 </head>
 
+	<h1 id="title">Chessboard</h1>
+<div id="container">
+
+
+<div class="row"> <!-- Row 4 -->
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+</div>
+<div class="clear"> </div>
+<div class="row"> <!-- Row 5 -->
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+</div>
+<div class="clear"> </div>
+
+<div class="row"> <!-- Row 6 -->
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+</div>
+<div class="clear"> </div>
+<div class="row"> <!-- Row 7 -->
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+</div>
+<div class="clear"> </div>
+
+<div class="row"> <!-- Row 8 -->
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+</div>
+</div> <!-- END OF CONTAINER -->
+
+<div class="clear"> </div>
 	
 <body>
 
