Updating HTML in order to fix it

--- a/a2/index.html
+++ b/a2/index.html
@@ -18,26 +18,27 @@
 <div class="row"> <!-- Row 4 -->
 <div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
 <div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
-
+</div>
+	
 <div class="row"> <!-- Row 5 -->
 <div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
 <div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
-
+</div>
 
 <div class="row"> <!-- Row 6 -->
 <div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
 <div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
-
+</div>
 	
 <div class="row"> <!-- Row 7 -->
 <div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
 <div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
-
+</div>
 
 <div class="row"> <!-- Row 8 -->
 <div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
 <div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
-	
+</div>	
 </div>
 	
 <!-- This is a footer. Added by Lev Lvovsky -->
