--- a/a2/index.html
+++ b/a2/index.html
@@ -4,7 +4,7 @@
 <!-- This is a container for data about the HTML document itself. Added by Lev Lvovsky -->
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/chess.css" type="text/css">
+  <link rel="stylesheet" href="../css/chess.css" type="text/css">
   <title>A2 - Group Chessboard</title>
 </head>
 	
