--- a/a2/index.html
+++ b/a2/index.html
@@ -13,12 +13,18 @@
 <h1 id="title">Chessboard</h1>
 	
 
+<div class="chessboard">
 
-
-  <div class="row"> <!-- Row 5 -->
-    <div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
-    <div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
-  </div>
+    <!-- Row 5 -->
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+  
 
 	
 <!-- This is a footer. Added by Lev Lvovsky -->
