--- a/a2/index.html
+++ b/a2/index.html
@@ -15,7 +15,7 @@
 
 <div class="chessboard">
 
-    <!-- Row 5 -->
+    <div class="row"><!-- Row 5 -->
     <div class="white"></div>
     <div class="black"></div>
     <div class="white"></div>
@@ -24,8 +24,8 @@
     <div class="black"></div>
     <div class="white"></div>
     <div class="black"></div>
-  
-
+  </div>
+<div class="clear"> </div>
 	
 <!-- This is a footer. Added by Lev Lvovsky -->
 <div id="footer"><p><a href="http://validator.w3.org/check?uri=referer" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a>
