--- a/a2/index.html
+++ b/a2/index.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="../css/chess.css" type="text/css">
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/dancing" type="text/css"/>
   <title>A2 - Group Chessboard</title>
 </head>
 	
