--- a/a2/index.html
+++ b/a2/index.html
@@ -11,12 +11,24 @@
 	
 <body>
 
-<h1 id="title"><center>Chessboard</center></h1>
-	
 
-<div class="chessboard">
 
-<div class="row"><!-- Row 5 -->
+<body>
+<h1 id="title">Chessboard</h1>
+<div id="container">
+
+<div class="row"> <!-- Row 4 -->
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+</div>
+<div class="clear"> </div>
+<div class="row"> <!-- Row 5 -->
 <div class="white"></div>
 <div class="black"></div>
 <div class="white"></div>
@@ -26,7 +38,8 @@
 <div class="white"></div>
 <div class="black"></div>
 </div>
-	
+<div class="clear"> </div>
+
 <div class="row"> <!-- Row 6 -->
 <div class="black"></div>
 <div class="white"></div>
@@ -37,7 +50,7 @@
 <div class="black"></div>
 <div class="white"></div>
 </div>
-
+<div class="clear"> </div>
 <div class="row"> <!-- Row 7 -->
 <div class="white"></div>
 <div class="black"></div>
@@ -48,6 +61,7 @@
 <div class="white"></div>
 <div class="black"></div>
 </div>
+<div class="clear"> </div>
 
 <div class="row"> <!-- Row 8 -->
 <div class="black"></div>
@@ -60,10 +74,14 @@
 <div class="white"></div>
 </div>
 </div> <!-- END OF CONTAINER -->
-	
-<!-- This is a footer. Added by Lev Lvovsky -->
-<div id="footer"><p><a href="http://validator.w3.org/check?uri=referer" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a>
+
+<div class="clear"> </div>
+<div id="footer"><p><a href="https://validator.w3.org/nu/check?uri=referer" target="_blank">NU HTML Checker </a><br>
 <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank"><img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a></p></div>
+
+
+</body>
+</html>
 		
  </body>
 </html>
