--- a/a2/index.html
+++ b/a2/index.html
@@ -24,7 +24,7 @@
 <div class="white"></div>
 <div class="black"></div>
 </div>
-<div class="clear"> </div>
+
 
 <div class="row"> <!-- Row 6 -->
 <div class="black"></div>
@@ -36,7 +36,7 @@
 <div class="black"></div>
 <div class="white"></div>
 </div>
-<div class="clear"> </div>
+
 <div class="row"> <!-- Row 7 -->
 <div class="white"></div>
 <div class="black"></div>
@@ -47,7 +47,6 @@
 <div class="white"></div>
 <div class="black"></div>
 </div>
-<div class="clear"> </div>
 
 <div class="row"> <!-- Row 8 -->
 <div class="black"></div>
@@ -61,7 +60,7 @@
 </div>
 </div> <!-- END OF CONTAINER -->
 
-<div class="clear"> </div>
+<!-- This is a footer. Added by Lev Lvovsky -->
 <div id="footer"><p><a href="https://validator.w3.org/nu/check?uri=referer" target="_blank">NU HTML Checker </a><br>
 <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank"><img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a></p></div>
 
