--- a/a2/index.html
+++ b/a2/index.html
@@ -4,14 +4,18 @@
 <!-- This is a container for data about the HTML document itself. Added by Lev Lvovsky -->
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="PROG 109 - Chessboard" />
   <link rel="stylesheet" href="../css/chess.css" type="text/css">
   <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/dancing" type="text/css"/>
   <title>A2 - Group Chessboard</title>
 </head>
 	
+	
 <body>
 <h1 id="title">Chessboard</h1>
-<div id="container">
+	
+<div class="chessboard">
+
 
 
 <div class="row"> <!-- Row 5 -->
