--- a/a2/index.html
+++ b/a2/index.html
@@ -6,7 +6,8 @@
   <meta charset="utf-8">
   <meta name="description" content="PROG 109 - Chessboard" />
   <link rel="stylesheet" href="../css/chess.css" type="text/css">
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/dancing" type="text/css"/>
+  <link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/just-letters" rel="stylesheet" type="text/css"/>
+
   <title>A2 - Group Chessboard</title>
 </head>
 	
