adding gold-castle

--- a/a2/index.html
+++ b/a2/index.html
@@ -19,7 +19,7 @@
 
 
 <div class="row"> <!-- Row 5 -->
-<div class="white"></div>
+<div class="white"><img src="../images/gold-castle.png"></div>
 <div class="black"></div>
 <div class="white"></div>
 <div class="black"></div>
