--- a/a2/index.html
+++ b/a2/index.html
@@ -19,7 +19,7 @@
 
 
 <div class="row"> <!-- Row 5 -->
-<div class="white"><img src="../images/gold-castle.png"></div>
+<div class="white"></div>
 <div class="black"></div>
 <div class="white"></div>
 <div class="black"></div>
@@ -53,7 +53,7 @@
 </div>
 
 <div class="row"> <!-- Row 8 -->
-<div class="black"></div>
+<div class="black"><img src="../images/gold-castle.png"></div>
 <div class="white"></div>
 <div class="black"></div>
 <div class="white"></div>
