--- a/a2/index.html
+++ b/a2/index.html
@@ -42,25 +42,25 @@
 </div>
 
 <div class="row"> <!-- Row 7 -->
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
+<div class="white"><img src="../images/gold-pawn.png"></div>
+<div class="black"><img src="../images/gold-pawn.png"></div>
+<div class="white"><img src="../images/gold-pawn.png"></div>
+<div class="black"><img src="../images/gold-pawn.png"></div>
+<div class="white"><img src="../images/gold-pawn.png"></div>
+<div class="black"><img src="../images/gold-pawn.png"></div>
+<div class="white"><img src="../images/gold-pawn.png"></div>
+<div class="black"><img src="../images/gold-pawn.png"></div>
 </div>
 
 <div class="row"> <!-- Row 8 -->
 <div class="black"><img src="../images/gold-castle.png"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
+<div class="white"><img src="../images/gold-knight.png"></div>
+<div class="black"><img src="../images/gold-bishop.png"></div>
+<div class="white"><img src="../images/gold-queen.png"></div>
+<div class="black"><img src="../images/gold-king.png"></div>
+<div class="white"><img src="../images/gold-bishop.png"></div>
+<div class="black"><img src="../images/gold-knight.png"></div>
+<div class="white"><img src="../images/gold-castle.png"></div>
 </div>
 </div> <!-- END OF CONTAINER -->
 
