--- a/a2/index.html
+++ b/a2/index.html
@@ -18,6 +18,11 @@
 
 
 
+
+	
+
+<!-- Set 2 is added by Lev Lvovsky -->
+	
 <div class="row"> <!-- Row 5 -->
 <div class="white"></div>
 <div class="black"></div>
