Added header and first four rows with images

--- a/a2/index.html
+++ b/a2/index.html
@@ -6,21 +6,63 @@
   <meta charset="utf-8">
   <meta name="description" content="PROG 109 - Chessboard" />
   <link rel="stylesheet" href="../css/chess.css" type="text/css">
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/just-letters" rel="stylesheet" type="text/css"/>  
+  <!-- Font family updated by Divyalakshana Perumal Rajaram -->
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/font/libre-caslon-display" type="text/css"/>  
   <title>A2 - Group Chessboard</title>
 </head>
-	
-	
+		
 <body>
+	
+<!-- This is the header for the chessboard. Updated by Divyalakshana Perumal Rajaram-->
 <h1 id="title">Chessboard</h1>
+
+<div class="chessboard">	
+<!-- Set 1: First four rows added by Divyalakshana Perumal Rajaram-->
+<div class="row"> <!-- Row 1 -->
+<div class="white"><img src="..\images\black-castle.png"></div>
+<div class="black"><img src="..\images\black-knight.png"></div>
+<div class="white"><img src="..\images\black-bishop.png"></div>
+<div class="black"><img src="..\images\black-king.png"></div>
+<div class="white"><img src="..\images\black-queen.png"></div>
+<div class="black"><img src="..\images\black-bishop.png"></div>
+<div class="white"><img src="..\images\black-knight.png"></div>
+<div class="black"><img src="..\images\black-castle.png"></div>
+</div>
+
+
+<div class="row"> <!-- Row 2 -->
+<div class="black"><img src="..\images\black-pawn.png"></div>
+<div class="white"><img src="..\images\black-pawn.png"></div>
+<div class="black"><img src="..\images\black-pawn.png"></div>
+<div class="white"><img src="..\images\black-pawn.png"></div>
+<div class="black"><img src="..\images\black-pawn.png"></div>
+<div class="white"><img src="..\images\black-pawn.png"></div>
+<div class="black"><img src="..\images\black-pawn.png"></div>
+<div class="white"><img src="..\images\black-pawn.png"></div>
+</div>
+
+<div class="row"> <!-- Row 3 -->
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+</div>
+
+<div class="row"> <!-- Row 4 -->
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+<div class="black"></div>
+<div class="white"></div>
+</div>
 	
-<div class="chessboard">
-
-
-
-
-	
-
 <!-- Set 2 is added by Lev Lvovsky -->
 	
 <div class="row"> <!-- Row 5 -->
